# magic

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
src/magic/: available_crawls.yaml  config_example.yaml  main.py
src/magic/crawler/: audit.py  m365.py  mailbox_permissions_pwsh.py  message.py  message_traces.py  message_traces_pwsh.py  messages.py  signin.py  ual.py
src/magic/enricher/: hash.py  ipapi.py  jsonl.py  s3_upload.py  timesketch.py
src/magic/helpers/: config.py  logging.py  mixins.py  permissions.py  pwsh.py  registry.py  utils.py
src/magic/interfaces/: crawler.py  enricher.py
tests/: conftest.py  factories.py  mixins.py  test_config.py  test_crawlers.py  test_utils.py
